--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,3 +1,47 @@
 .profile-dropdown {
+  list-style: none;
+  margin: 0;
+  padding: 10px 7px;
   position: absolute;
+  right: 0;
+  top: 100%;
 }
+
+.profile-dropdown button {
+  padding: 0;
+}
+
+.navbar {
+  align-items: center;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  height: 45px;
+  justify-content: space-between;
+  left: 0;
+  margin: 0;
+  padding: 5px 10px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.navbar li {
+  list-style-type: none;
+}
+
+.navbar li:first-child {
+  justify-self: flex-start;
+}
+
+.navbar button {
+  outline:none;
+  background: transparent;
+  border: 0;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+
+
+
