--- a/frontend/src/color-scheme/peach.css
+++ b/frontend/src/color-scheme/peach.css
@@ -26,25 +26,37 @@ form button {
 #modal-background {
     background-color: rgba(0, 0, 0, 0.7);
 }
+
+.story-controls button{
+    background: transparent;
+}
 /*TEXT*/
 body,
 .navbar button,
 .home-logo-navbar button,
 form button:hover,
-.connect-block:hover {
+.connect-block:hover,
+.story-controls button {
     color: #333
-}
-
-.navbar button:hover,
-.home-logo-navbar .profile-dropdown button:hover,
-.connect-block{
-    color: #efdbb0
 }
 
 .home-logo-navbar button:hover,
 .scene-handle i:hover,
-.scene-handle i.active {
+.scene-handle i.active,
+.story-controls button[disabled],
+.story-controls button[disabled]:hover {
     color: #b08260;
+}
+
+.navbar button:hover,
+.home-logo-navbar .profile-dropdown button:hover,
+.connect-block,
+.story-controls button:hover {
+    color: #efdbb0
+}
+
+#modal-content button {
+    color: #fff;
 }
 
 /*BORDER-COLOR*/
@@ -53,8 +65,12 @@ form input:focus {
     border-color: #b08260;
 }
 
-#modal-content button {
-    color: #fff;
+.story-controls button {
+    border-color: #333;
+}
+
+.scenes-list.active {
+    border-color: tomato;
 }
 
 /*Dance Script*/
