--- a/frontend/src/color-scheme/peach.css
+++ b/frontend/src/color-scheme/peach.css
@@ -2,7 +2,8 @@
 
 /*BACKGROUND*/
 .scenes-list .scene-text,
-.scenes-list .scene-handle {
+.scenes-list .scene-handle,
+.confirm-box .text {
     background-color: #fff;
 }
 
@@ -59,6 +60,10 @@ form button:hover,
     color: #fff;
 }
 
+.confirm-box .errors{
+    color: tomato;
+}
+
 /*BORDER-COLOR*/
 .home-logo-navbar > div,
 form input:focus {
@@ -83,4 +88,18 @@ body, button, input, textarea, select {
     font-family: 'Open Sans', sans-serif;
  }
 
-
+/*Scrollbar settings*/
+*::-webkit-scrollbar {
+    width: 7px;
+    background-color: #dba279;
+}
+ 
+*::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px #333;
+}
+ 
+*::-webkit-scrollbar-thumb {
+  background-color: tomato;
+  border: 1px solid #333;
+  border-radius: 3px;
+}
