--- a/frontend/src/components/ScenesPage/ScenesPage.css
+++ b/frontend/src/components/ScenesPage/ScenesPage.css
@@ -65,30 +65,6 @@
     opacity: 0;
 }
 
-.story-controls {
-    align-items: center;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    height: 45px;
-    justify-content: center;
-    margin: 0 auto;
-    padding: 0 30%;
-    position: fixed;
-    top: 0;
-    left: 30%;
-    width: 30%;
-    z-index: 100;
-}
-
-.story-controls button {
-    border-style: solid;
-    border-width: 1px;
-    margin: 0 5px;
-    padding: 5px 7px;
-    text-transform: uppercase;
-}
-
 .scenes-list.active {
     border-width: 1px;
     border-style: solid;
@@ -106,4 +82,68 @@
     overflow-y: scroll;
     padding: 15px;
     text-align: justify;
+}
+
+.sidebar-container {
+    box-sizing: border-box;
+    display: block;
+    height: 100vh;
+    left:-200px;
+    padding: 45px 0 0 0;
+    position:fixed;
+    top:0;
+    width: 200px;
+    transition: left 0.5s;
+}
+
+.sidebar-container.open {
+    left:0;
+    transition: left 0.5s;
+}
+
+.sidebar-container .sidebar {
+    box-sizing: border-box;
+    display: block;
+    width: 100%;
+    height:100%;
+    padding: 15px;
+    position: relative;
+}
+
+
+.story-controls button {
+    border-style: solid;
+    border-width: 1px;
+    margin: 0 5px;
+    padding: 5px 7px;
+    text-transform: uppercase;
+}
+
+.main-content {
+    padding: 0px;
+}
+.main-content.open {
+    padding-left: 200px;
+}
+
+.openSidebar {
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+    opacity: 1;
+    padding: 7px;
+    position: absolute;
+    right: -54px;
+    transition: all 0.5s;
+}
+
+.sidebar-container.open .openSidebar {
+    opacity: 0;
+    right: 0px;
+    transition: all 0.5s;
+}
+
+.closeSidebar {
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
