--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,9 +8,9 @@ body, #root {
 }
 
 .page-content{
-    margin: 0 auto;
+    margin: 0;
     padding: 50px 0;
-    width: 715px;
+    width: 100%;
 }
 
 form {
