Create new scene frontend

--- a/frontend/src/color-scheme/peach.css
+++ b/frontend/src/color-scheme/peach.css
@@ -7,7 +7,8 @@
     background-color: #fff;
 }
 
-body, #root, #modal-content {
+body, #root, #modal-content,
+.new-scene {
     background-color: #efdbb0;
 }
 
@@ -18,7 +19,7 @@ body, #root, #modal-content {
 }
 
 .connect-block,
-.openSidebar,
+.open-sidebar,
 .sidebar-container .sidebar {
     background-color: #b08260;
 }
@@ -40,7 +41,8 @@ body,
 .home-logo-navbar button,
 form button:hover,
 .connect-block:hover,
-.story-controls button {
+.story-controls button,
+.new-scene {
     color: #333
 }
 
@@ -63,7 +65,8 @@ form button:hover,
     color: #fff;
 }
 
-.confirm-box .errors{
+.confirm-box .errors,
+.new-scene:hover {
     color: tomato;
 }
 
@@ -73,11 +76,13 @@ form input:focus {
     border-color: #b08260;
 }
 
-.story-controls button {
+.story-controls button,
+.new-scene {
     border-color: #333;
 }
 
-.scenes-list.active {
+.scenes-list.active,
+.new-scene:hover {
     border-color: tomato;
 }
 
