--- a/frontend/src/color-scheme/peach.css
+++ b/frontend/src/color-scheme/peach.css
@@ -10,13 +10,14 @@
 
 body, #root, #modal-content,
 .new-scene,
-add-entity {
+.add-entity,
+.profile-header button {
     background-color: #efdbb0;
 }
 
 .navbar, form button:hover,
 .profile-dropdown,
-.sidebar .story-controls button {
+.story-controls button {
     background-color: #dba279;
 }
 
@@ -40,9 +41,6 @@ form button {
     background-color: #000;
 }
 
-.story-controls button{
-    background: transparent;
-}
 /*TEXT*/
 body,
 .navbar button,
@@ -51,10 +49,12 @@ body,
 form button:hover,
 #modal-content button:hover, 
 .connect-block:hover,
-.story-controls button,
 .new-scene,
 .add-entity,
-.book-cover .controls i {
+.book-cover .controls i,
+.profile-header button,
+.story-controls button,
+.story-page h1 a {
     color: #333
 }
 
@@ -64,7 +64,8 @@ form button:hover,
 .story-controls button[disabled],
 .story-controls button[disabled]:hover,
 .modal-close:hover,
-form label i:hover {
+form label i:hover,
+.story-page h1 a:hover {
     color: #b08260;
 }
 
@@ -72,9 +73,9 @@ form label i:hover {
 .home-logo-navbar .profile-dropdown button:hover,
 .profile-dropdown a:hover,
 .connect-block,
-.story-controls button:hover,
 .book-cover .controls i:hover,
-.book-cover .controls i.active {
+.book-cover .controls i.active,
+.pseudonym-list i:hover {
     color: #efdbb0
 }
 
@@ -85,7 +86,9 @@ form label i:hover {
 
 .confirm-box .errors,
 .new-scene:hover,
-.add-entity:hover {
+.add-entity:hover,
+.profile-header button:hover,
+.story-controls button:hover {
     color: tomato;
 }
 
@@ -93,26 +96,32 @@ form label i:hover {
 .home-logo-navbar > div,
 form input:focus,
 .entity-block .drop-block,
-.book-content {
+.book-content,
+.story-controls button[disabled],
+.story-controls button[disabled]:hover {
     border-color: #b08260;
 }
 
-.story-controls button,
 .new-scene,
 .add-entity,
-.book-cover {
+.book-cover,
+.profile-header button,
+.story-controls button {
     border-color: #333;
 }
 
 .scenes-list.active,
 .new-scene:hover,
-.add-entity:hover {
+.add-entity:hover,
+.profile-header button:hover,
+.story-controls button:hover {
     border-color: tomato;
 }
 
 /*Dance Script*/
 #modal-content h3,
-.book-cover > div:first-child {
+.book-cover > div:first-child,
+h1 {
     font-family: 'Dancing Script', cursive;
 }
 
