--- a/frontend/src/components/ScenesPage/ScenesPage.css
+++ b/frontend/src/components/ScenesPage/ScenesPage.css
@@ -106,7 +106,7 @@
     display: block;
     width: 100%;
     height:100%;
-    padding: 15px;
+    padding: 30px 15px 15px 15px;
     position: relative;
 }
 
@@ -121,9 +121,11 @@
 
 .main-content {
     padding: 0px;
+    transition: all 0.5s;
 }
 .main-content.open {
     padding-left: 200px;
+    transition: all 0.5s;
 }
 
 .open-sidebar {
