--- a/frontend/src/color-scheme.css
+++ b/frontend/src/color-scheme.css
@@ -1,24 +1,83 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Open+Sans:wght@300&display=swap');
 
+.peach {
+    --bg-color1: #fff;
+    --bg-color2: #efdbb0;
+    --bg-color3: #dba279;
+    --bg-color4: #b08260;
+    --bg-color5: #333;
+    --bg-color6: #000;
+    --bg-color7: tomato;
+    --modal-bg: rgba(0, 0, 0, 0.7);
+
+    --text-color1: #333;
+    --text-color2: #b08260;
+    --text-color3: #efdbb0;
+    --text-color4: #fff;
+    --text-color5: tomato;
+
+    --border-color1: #b08260;
+    --border-color2: #333;
+    --border-color3: tomato;
+  }
+  
+.beach {
+    --bg-color1: #fff;
+    --bg-color2: #c6d7d8;
+    --bg-color3: #86cae4;
+    --bg-color4: #5392bf;
+    --bg-color5: #333;
+    --bg-color6: #000;
+    --bg-color7: #47ffd7;
+    --modal-bg: rgba(0, 0, 0, 0.7);
+
+    --text-color1: #333;
+    --text-color2: #5392bf;
+    --text-color3: #c6d7d8;
+    --text-color4: #fff;
+    --text-color5: #47ffd7;
+
+    --border-color1: #5392bf;
+    --border-color2: #333;
+    --border-color3: #47ffd7;
+  }
+
+.theme-button.peach-theme {
+    background-color: #dba279;
+}
+.theme-button.beach-theme {
+    background-color: #86cae4;
+}
+
+.theme-button {
+    border-color: var(--border-color2);
+}
+.theme-button.active,
+.theme-button:hover {
+    border-color: var(--border-color3);
+}
+
 /*BACKGROUND*/
 .scenes-list .scene-text,
 .scenes-list .scene-handle,
 .confirm-box .text,
 .entity-block {
-    background-color: #fff;
+    background-color: var(--bg-color1);
 }
 
-body, #root, #modal-content,
+body, #root, 
+.root-container,
+#modal-content,
 .new-scene,
 .add-entity,
 .profile-header button {
-    background-color: #efdbb0;
+    background-color: var(--bg-color2);
 }
 
 .navbar, form button:hover,
 .profile-dropdown,
 .story-controls button {
-    background-color: #dba279;
+    background-color: var(--bg-color3);
 }
 
 .connect-block,
@@ -26,19 +85,20 @@ body, #root, #modal-content,
 .sidebar-container .sidebar,
 .entity-block .entity-header,
 .book-cover {
-    background-color: #b08260;
+    background-color: var(--bg-color4);
 }
 
 form button {
-    background-color: #333;
-}
-
-#modal-background {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: var(--bg-color5);
+    
 }
 
 .book-cover::before {
-    background-color: #000;
+    background-color: var(--bg-color6);;
+}
+
+#modal-background {
+    background-color: var(--modal-bg);
 }
 
 /*TEXT*/
@@ -55,7 +115,7 @@ form button:hover,
 .profile-header button,
 .story-controls button,
 .story-page h1 a {
-    color: #333
+    color: var(--text-color1)
 }
 
 .home-logo-navbar button:hover,
@@ -66,7 +126,7 @@ form button:hover,
 .modal-close:hover,
 form label i:hover,
 .story-page h1 a:hover {
-    color: #b08260;
+    color: var(--text-color2);
 }
 
 .navbar button:hover,
@@ -76,12 +136,12 @@ form label i:hover,
 .book-cover .controls i:hover,
 .book-cover .controls i.active,
 .pseudonym-list i:hover {
-    color: #efdbb0
+    color: var(--text-color3)
 }
 
 #modal-content button,
 .book-cover {
-    color: #fff;
+    color: var(--text-color4);
 }
 
 .confirm-box .errors,
@@ -89,7 +149,7 @@ form label i:hover,
 .add-entity:hover,
 .profile-header button:hover,
 .story-controls button:hover {
-    color: tomato;
+    color: var(--text-color5);
 }
 
 /*BORDER-COLOR*/
@@ -99,7 +159,7 @@ form input:focus,
 .book-content,
 .story-controls button[disabled],
 .story-controls button[disabled]:hover {
-    border-color: #b08260;
+    border-color: var(--border-color1);
 }
 
 .new-scene,
@@ -107,7 +167,7 @@ form input:focus,
 .book-cover,
 .profile-header button,
 .story-controls button {
-    border-color: #333;
+    border-color: var(--border-color2);
 }
 
 .scenes-list.active,
@@ -115,7 +175,7 @@ form input:focus,
 .add-entity:hover,
 .profile-header button:hover,
 .story-controls button:hover {
-    border-color: tomato;
+    border-color: var(--border-color3);
 }
 
 /*Dance Script*/
@@ -134,15 +194,15 @@ body, button, input, textarea, select,
 /*Scrollbar settings*/
 *::-webkit-scrollbar {
     width: 7px;
-    background-color: #dba279;
+    background-color: var(--bg-color3);
 }
  
 *::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px #333;
+    -webkit-box-shadow: inset 0 0 6px var(--border-color2);
 }
  
 *::-webkit-scrollbar-thumb {
-  background-color: tomato;
-  border: 1px solid #333;
+  background-color: var(--bg-color7);
+  border: 1px solid var(--border-color2);
   border-radius: 3px;
 }
