--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -47,6 +47,16 @@
   text-transform: uppercase;
 }
 
+.theme-button {
+  border-radius: 50%;
+  border-style: solid;
+  border-width: 2px;
+  box-sizing: border-box;
+  display: inline-block;
+  height:25px;
+  margin-right: 5px;
+  width:25px;
+}
 
 
 
