--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 /* TODO Add site wide styles */
-@import './color-scheme/peach.css';
+@import './color-scheme.css';
 
 body, #root {
     box-sizing: border-box;
