--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,8 @@
 /* TODO Add site wide styles */
-@import './color-scheme.css';
+@import './styles/color-scheme.css';
+@import './styles/general/index.css';
+@import './styles/mobile/index.css';
+
 
 body, #root {
     box-sizing: border-box;
