--- a/frontend/src/styles/general/Pseudonyms.css
+++ b/frontend/src/styles/general/Pseudonyms.css
@@ -2,9 +2,7 @@
     box-sizing: border-box;
     display:flex;
     flex-direction: column;
-    margin: 0;
-    padding: 0;
-    width: 100%;
+    margin: 10px;
 }
 
 .pseudonym-list > div {
@@ -13,3 +11,11 @@
     justify-content: space-between;
 }
 
+
+.profile-controls button {
+    border-style: solid;
+    border-width: 1px;
+    margin: 0 5px;
+    padding: 5px 7px;
+    text-transform: uppercase;
+}
