--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,60 +7,13 @@
 body, #root {
     box-sizing: border-box;
     margin: 0;
-    padding: 0;
+    padding: 0;    
+    min-height: 100vh;
+    position: relative;
 }
 
 .page-content{
     margin: 0;
     padding: 50px 0;
     width: 100%;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-form h3 {
-    display: block;
-    font-size: 24px;
-    text-align: center;
-}
-
-form button {
-    padding: 7px 10px;
-    border-radius: 0;
-    border-style: none;
-    text-transform: uppercase;
-    margin: 20px auto;
-    font-size: 14px;
-}
-
-form input, form select, form textarea {
-    padding: 5px 6px 5px 11px;
-    font-size: 14px;
-    border-style: solid;
-    border-radius: 0;
-    border-width: 1px;
-    margin: 10px;
-}
-
-form textarea {
-    grid-column: span 2;
-}
-
-form input:focus {
-    outline: 0;
-}
-
-form > div {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(198px, 1fr));
-    width: 400px;
-}
-
-form label {
-    margin: 10px;
 }
