--- a/frontend/src/styles/color-scheme2.css
+++ b/frontend/src/styles/color-scheme2.css
@@ -24,29 +24,29 @@
     --logo-color1: #fff;
     --logo-color2: #000;
   }
-  
+
 .beach {
-    --bg-color1: #fff;
-    --bg-color2: #c6d7d8;
-    --bg-color3: #86cae4;
-    --bg-color4: #5392bf;
-    --bg-color5: #333;
+    --bg-color1: #245579;
+    --bg-color2: #006ba6;
+    --bg-color3: #d81159;
+    --bg-color4: #8f2d56;
+    --bg-color5: #ffbc42;
     --bg-color6: #000;
     --bg-color7: #47ffd7;
     --modal-bg: rgba(0, 0, 0, 0.7);
 
-    --text-color1: #333;
-    --text-color2: #5392bf;
-    --text-color3: #c6d7d8;
-    --text-color4: #fff;
+    --text-color1: #000;
+    --text-color2: #ffbc42;
+    --text-color3: #0496ff;
+    --text-color4: #ffbc42;
     --text-color5: #47ffd7;
 
-    --border-color1: #5392bf;
-    --border-color2: #333;
+    --border-color1: #8f2d56;
+    --border-color2: #006ba6;
     --border-color3: #47ffd7;
-    --border-color4: #c6d7d8;
+    --border-color4: #245579;
 
-    --logo-color1: #fff;
+    --logo-text-color: #fff;
     --logo-color2: #000;
   }
 
@@ -66,7 +66,86 @@
 }
 
 /*BACKGROUND*/
-.scenes-list .scene-text,
+#modal-background{
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+body,
+.profile-header button,
+.mobile-nav span.open,
+.profile-controls button,
+.profile-header button,
+#modal-content,
+form button {
+    background-color: var(--bg-color1);
+}
+
+body,
+.profile-header button,
+.mobile-nav span.open,
+.profile-controls button,
+.profile-header button,
+#modal-content,
+form button,
+.story-controls button,
+.story-controls button[disabled],
+.story-controls button[disabled]:hover,
+footer a,
+.navbar button,
+.navbar a {
+    color: var(--text-color1);
+}
+
+form button:hover,
+.profile-controls button:hover,
+.profile-header button:hover {
+    background-color: var(--bg-color2);
+}
+
+form button:hover,
+.profile-controls button:hover,
+.profile-header button:hover,
+.pseudonym-list i:hover,
+.open-sidebar:hover,
+.close-sidebar:hover,
+.story-controls button:hover,
+footer a:hover,
+.navbar button:hover,
+.navbar a:hover {
+    color: var(--text-color2);
+}
+footer,
+.navbar,
+.profile-dropdown,
+.story-controls button {
+    background-color: var(--bg-color3);
+}
+
+.sidebar,
+.book-cover,
+.story-controls button:hover,
+.story-controls button[disabled],
+.story-controls button[disabled]:hover,
+.mobile-nav span,
+.open-sidebar {
+    background-color: var(--bg-color4);
+}
+
+.scene-block .scene-handle,
+.scene-block .scene-text,
+input, select, textarea {
+    background-color: var(--bg-color5);
+}
+
+.book-cover::before {
+    background-color: var(--bg-color6);
+}
+
+a.logo{
+    color: var(--logo-text-color);
+}
+
+/* .scenes-list .scene-text,
 .scenes-list .scene-handle,
 .confirm-box .text,
 .entity-block {
@@ -114,7 +193,7 @@ form button {
 }
 
 /*TEXT*/
-body,
+/* body,
 .navbar button,
 .profile-dropdown a,
 .home-logo-navbar button,
@@ -133,6 +212,22 @@ footer a {
     color: var(--text-color1)
 }
 
+.home-logo-navbar button,
+form button:hover,
+#modal-content button:hover, 
+.connect-block:hover,
+.add-entity,
+.book-cover .controls i,
+.profile-header button,
+.profile-controls button,
+.story-page h1 a,
+.mobile-nav span.open,
+.scenes-list .scene-text,
+.scenes-list .scene-handle,
+input {
+    color: red;
+}
+
 .home-logo-navbar button:hover,
 .scene-handle i:hover,
 .scene-handle i.active,
@@ -143,7 +238,7 @@ footer a {
 .modal-close:hover,
 form label i:hover,
 .story-page h1 a:hover,
-.pseudonym-list i:hover {
+.pseudonym-list i:hover{
     color: var(--text-color2);
 }
 
@@ -154,7 +249,9 @@ form label i:hover,
 .book-cover .controls i:hover,
 .book-cover .controls i.active,
 .mobile-nav span,
-footer a:hover {
+footer a:hover,
+.open-sidebar:hover,
+.close-sidebar:hover  {
     color: var(--text-color3)
 }
 
@@ -171,10 +268,10 @@ footer a:hover {
 .profile-controls button:hover,
 .open-sidebar.active {
     color: var(--text-color5);
-}
+} */
 
 /*BORDER-COLOR*/
-.home-logo-navbar > div,
+/* .home-logo-navbar > div,
 form input:focus,
 .entity-block .drop-block,
 .book-content,
@@ -207,14 +304,14 @@ form input:focus,
 
 .mobile-nav span.open {
     border-bottom-color: var(--border-color4);
-}
+} */
 
 /*Dance Script*/
 #modal-content h3,
 .book-cover > div:first-child,
 h1 {
     font-family: 'Dancing Script', cursive;
-}
+} 
 
 /*Open Sans*/
 body, button, input, textarea, select,
@@ -223,7 +320,7 @@ body, button, input, textarea, select,
  }
 
 /*Scrollbar settings*/
-*::-webkit-scrollbar {
+/* *::-webkit-scrollbar {
     width: 7px;
     background-color: var(--bg-color3);
 }
@@ -236,4 +333,4 @@ body, button, input, textarea, select,
   background-color: var(--bg-color7);
   border: 1px solid var(--border-color2);
   border-radius: 3px;
-}
+} */ 
