--- a/frontend/src/styles/general/Logo.css
+++ b/frontend/src/styles/general/Logo.css
@@ -1,10 +1,10 @@
 .logo {
-    color: #fff;
+    color: var(--logo-color1);
     font-size: 25px;
     font-family: 'Dancing Script', cursive;
     position: relative;
     text-decoration: none;
-    text-shadow: 1px 1px #000;
+    text-shadow: 1px 1px var(--logo-color2);
     z-index: 1;
   }
   .logo > div {
@@ -20,7 +20,7 @@
   }
   
   .logo > div > span::before{
-    background-color: #000;
+    background-color: var(--logo-color2);
     border-radius: 50%;
     content: "";
     display: block;
