--- a/frontend/src/styles/general/Navigation.css
+++ b/frontend/src/styles/general/Navigation.css
@@ -7,7 +7,7 @@
   top: 100%;
 }
 
-.profile-dropdown button {
+.navbar .profile-dropdown button {
   padding: 0;
   text-transform: none;
 }
@@ -29,7 +29,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 99;
+  z-index: 100;
 }
 
 .navbar li {
