--- a/frontend/src/styles/general/Profile.css
+++ b/frontend/src/styles/general/Profile.css
@@ -132,7 +132,9 @@
 }
 
 .profile-header button,
-.story-controls button {
+.profile-controls button,
+.story-controls button{
+    border-radius: 0;
     border-style: dashed;
     border-width: 2px;
     font-weight: bold;
