--- a/frontend/src/styles/general/ScenesPage.css
+++ b/frontend/src/styles/general/ScenesPage.css
@@ -122,18 +122,21 @@
 .open-sidebar {
     border-radius: 0 5px 5px 0;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
     opacity: 1;
     padding: 7px;
     position: absolute;
-    right: -54px;
+    right: -50px;
     top: 50px;
-    transition: all 0.5s;
+    transition: right 0.5s;
+    width: 50px;
 }
 
 .sidebar-container.open .open-sidebar {
     opacity: 0;
     right: 0px;
-    transition: all 0.5s;
+    transition: right 0.5s;
 }
 
 .close-sidebar {
@@ -151,4 +154,11 @@
     justify-content: center;
     margin: 10px auto;
     width: 530px;
+}
+
+.story-controls button i {
+    display: none;
+}
+.story-controls button span {
+    display: inline;
 }
