--- a/frontend/src/styles/mobile/index.css
+++ b/frontend/src/styles/mobile/index.css
@@ -20,17 +20,93 @@
         padding: 0px;
     }
 
+    .main-content, .main-content.open{
+        padding-top: 50px;
+    }
+
     .book-cover, .add-entity {
         height: 200px;
     }
 
+    .only-mobile {
+        display: none;
+    }
+
+    .sidebar-container{
+        width: 100%;
+        height: 55px;
+        left: 0;
+        padding: 0;
+        position: fixed;
+        top: 45px;
+        z-index: 80;
+    }
+
+    .sidebar-container .sidebar {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        padding: 0;
+    }
+
+    .story-controls {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .story-controls button {
+        margin: 5px;
+        padding: 0 15px;
+    }
+
+    .story-controls button > i {
+        display: inline;
+    }
+
+    .story-controls button > span,
+    .close-sidebar,
+    .open-sidebar {
+        display: none;
+    }
+
+    
+
 }
 
+@media screen and (max-width: 535px){
+    .scenes-list, .title-input,
+    .scenes-list .scene-block {
+        width: 100%;
+    }
+
+    .scenes-list .scene-text {
+        width: calc(100% - 30px);
+    }
+
+    .scenes-list .scene-handle {
+        right: 0;
+    }
+}
 
 @media screen and (max-width: 500px){
     .profile-header{
         display: flex;
         flex-direction: column;
+    }
+
+    form > div {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+    }
+
+    form button {
+        width: 100%;
+        margin: 10px auto;
+    }
+
+    .only-mobile {
+        display: inline-block;
     }
 }
 
