Fixed console errors

--- a/frontend/src/styles/color-scheme.css
+++ b/frontend/src/styles/color-scheme.css
@@ -18,8 +18,8 @@
     --text-hover2: #b08260;
     
     --bg-color3: #b08260;
-    --text-color3: #efdbb0;
-    --text-hover3: #fff;
+    --text-color3: #fff;
+    --text-hover3: #efdbb0;
     --text-color3alt: #333;
     --text-hover3alt: #efdbb0;
 
