--- a/frontend/src/styles/general/Navigation.css
+++ b/frontend/src/styles/general/Navigation.css
@@ -32,6 +32,11 @@
   z-index: 100;
 }
 
+.nav-links {
+  display: flex;
+  flex-direction: row;
+}
+
 .navbar li {
   list-style-type: none;
 }
@@ -40,12 +45,14 @@
   justify-self: flex-start;
 }
 
-.navbar button {
+.navbar button,
+.nav-links a {
   outline:none;
   background: transparent;
   border: 0;
   font-size: 18px;
   text-transform: uppercase;
+  padding: 1px 6px;
 }
 
 .theme-button {
@@ -59,5 +66,10 @@
   width:25px;
 }
 
+.logout span {
+  display: inline-block;
+}
 
-
+.logout i {
+  display: none;
+}
