--- a/frontend/src/styles/general/EntitesTree.css
+++ b/frontend/src/styles/general/EntitesTree.css
@@ -24,7 +24,7 @@ div.entities-tree div.last {
 
 div.entities-tree .position-divider {
     box-sizing: border-box;
-    /* height: 3px; */
+    height: 3px;
     margin: 0;
     padding: 0;
 }
@@ -34,7 +34,8 @@ div.entities-tree .join-block {
 }
 
 div.entities-tree .position-divider.over {
-    padding: 1px 0;
+    /* padding: 1px 0; */
+    height: 22px;
 }
 
 div.entities-tree .join-block.over,
