--- a/frontend/src/styles/general/EntitesTree.css
+++ b/frontend/src/styles/general/EntitesTree.css
@@ -34,7 +34,6 @@ div.entities-tree .join-block {
 }
 
 div.entities-tree .position-divider.over {
-    /* padding: 1px 0; */
     height: 22px;
 }
 
@@ -57,6 +56,13 @@ h3.entities-top-link {
     list-style: none;
     margin: 0;
     padding: 0;
+}
+
+button.join-block {
+    border: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
 }
 
 .active-entity {
