--- a/frontend/src/styles/mobile/index.css
+++ b/frontend/src/styles/mobile/index.css
@@ -1,5 +1,7 @@
 @media screen and (max-width: 835px){
-    .book-cover, .add-entity {
+    .book-cover, 
+    .preview-tile,
+    .add-entity {
         height: 200px;
     }
 
