--- a/frontend/src/styles/general/Profile.css
+++ b/frontend/src/styles/general/Profile.css
@@ -1,7 +1,6 @@
 .entities-tiles {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 10px 230px);
-    margin: 10px;
+    display: flex;
+    flex-direction: column;
     width: 100%;
 }
 
@@ -13,20 +12,15 @@
     box-sizing: border-box;
     border-radius: 5px;
     display: flex;
-    /* height: 330px; */
-    height: 200px;
     justify-content: center;
-    margin-top: 10px;
-    /* margin-left: 10px; */
     position: relative;
-    width: 230px;
+    width: 530px;
 }
 
 .tile-position {
     box-sizing: border-box;
-    height: 200px;
-    margin-top: 10px;
-    width: 10px;
+    height: 10px;
+    width: 530px;
 }
 
 .tile-position.over {
@@ -52,7 +46,7 @@
     margin-left: 30px;
 }
 
-.book-cover::before {
+/* .book-cover::before {
     border-radius: 50%;
     content: "";
     display:block;
@@ -62,7 +56,7 @@
     top: 50%;
     transform: translate(-50%, -50%);
     width: 150px;
-}
+} */
 
 .book-cover.open::before {
     height: 20px;
