--- a/frontend/src/styles/color-scheme.css
+++ b/frontend/src/styles/color-scheme.css
@@ -151,6 +151,11 @@ body, button, input, textarea, select,
 }
 
 /*BACKGROUND*/
+div.entities-tree a.join-block,
+div.entities-tree button.join-block {
+    background-color: transparent;
+}
+
 #modal-background {
     background-color: var(--modal-bg);
 }
@@ -173,7 +178,8 @@ button,
 #modal-content,
 .mobile-nav span.open:hover,
 .new-scene,
-.add-entity {
+.add-entity,
+.tile-position {
     background-color: var(--bg-color1);
 }
 
@@ -217,7 +223,8 @@ button:hover,
 footer,
 .sidebar button,
 .mobile-nav span:hover,
-h3.entities-top-link {
+h3.entities-top-link,
+.tile-position.over {
     background-color: var(--bg-color2);
 }
 
@@ -277,13 +284,17 @@ h3.entities-top-link a:hover {
 .sidebar,
 .sidebar button:hover,
 .open-sidebar,
-.connect-block {
+.connect-block,
+div.entities-tree a.join-block,
+div.entities-tree button.join-block {
     color: var(--text-color3);
 }
 
 .open-sidebar:hover,
 .close-sidebar:hover,
-.connect-block:hover {
+.connect-block:hover,
+div.entities-tree a.join-block:hover,
+div.entities-tree button.join-block:hover {
     color: var(--text-hover3);
 }
 
