--- a/frontend/src/styles/general/index.css
+++ b/frontend/src/styles/general/index.css
@@ -8,3 +8,19 @@
 @import './Footer.css';
 @import './EntitesTree.css';
 @import './forms.css';
+
+body, #root {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;    
+    min-height: 100vh;
+    font-size: 16px;
+    position: relative;
+}
+
+.page-content{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 50px 15px;
+    width: 100%;
+}
