--- a/frontend/src/styles/general/Profile.css
+++ b/frontend/src/styles/general/Profile.css
@@ -22,6 +22,12 @@
     justify-content: space-between;
 }
 
+.book-cover.dragged {
+    position: absolute;
+    width: auto;
+    z-index: 101;
+}
+
 .tile-position {
     box-sizing: border-box;
     height: 10px;
@@ -65,6 +71,7 @@
 }
 
 .book-cover .entity-type {
+    cursor: grab;
     font-size: 25px;
     margin-right: 10px;
 }
