--- a/frontend/src/styles/general/EntitesTree.css
+++ b/frontend/src/styles/general/EntitesTree.css
@@ -8,6 +8,13 @@ div.entities-tree div.last {
     margin-left: 10px;
 }
 
+div.entities-tree div.dragged {
+    height: auto;
+    position: absolute;
+    width: auto;
+    z-index: 101;
+}
+
 div.entities-tree .position-divider {
     box-sizing: border-box;
     height: 3px;
