--- a/frontend/src/styles/mobile/index.css
+++ b/frontend/src/styles/mobile/index.css
@@ -1,6 +1,5 @@
-@media screen and (max-width: 835px){
+@media screen and (max-width: 850px){
     .main-content .breadcrumbs, .main-content .entities-tiles {
-        padding-left: 30px;
         width: 100%;
     }
 
@@ -10,6 +9,14 @@
         flex-direction: column;
         align-items: flex-start;
         height: auto;
+        width: 100%;
+    }
+
+    .book-cover, 
+    .preview-tile,
+    .add-entity,
+    .tile-position {
+        width: 100%;
     }
 
     .book-cover .controls {
@@ -31,6 +38,12 @@
         min-width: 200px;
     }
 
+}
+
+@media screen and (max-width: 600px){
+    .entities-tree {
+        width: 100%;
+    }
     .sidebar {
         width:100%;
     }
@@ -69,13 +82,6 @@
 
     .page-content{
         padding: 50px 0;
-    }
-
-}
-
-@media screen and (max-width: 575px){
-    .entities-tree {
-        width: 100%;
     }
 }
 
