entities tree refactored

--- a/frontend/src/styles/general/EntitesTree.css
+++ b/frontend/src/styles/general/EntitesTree.css
@@ -10,6 +10,7 @@ div.entities-tree div.last {
 
 div.entities-tree div.dragged {
     border-radius: 3px;
+    border: 1px solid;
     height: auto;
     padding: 3px;
     position: absolute;
